@@ -32,6 +32,9 @@ This release includes:
     splitting transactions
 - Screen Facade
   - List multi form submit button below and not in own column
+  - Allow field, auto-fields-entity, and auto-fields-service to appear in
+    any order and preserve that order when exploding the form definition
+  - Auto Screen move Edit button on list forms to left side
 - Added support for other types of wiki files including MediaWiki, Textile,
   TracWiki, and TWiki (in addition to Confluence)
 
@@ -496,8 +499,6 @@ Tools probable for 1.0 final:
 ===========================================================================
 
 - Screen Facade
-  - Auto Screen move Edit button on list forms to left side (with XML Form
-    changes as needed to make it possible)
   - Filter menu rendering by authorization
 
 ===========================================================================
